# ----

./: .env.example  .gitignore  README.md  create-desktop-shortcut.vbs  lead-funnel-gui.cmd  lead-funnel-gui.vbs  lead-funnel.cmd  pyproject.toml  requirements-dev.txt  scan-now.cmd  start-kwork-browser.cmd  start_mobile_control.cmd  watch.cmd
docs/: channel-sources.md
docs/superpowers/plans/: 2026-07-17-gui-reply-regeneration.md  2026-07-17-human-kwork-replies.md  2026-07-17-kwork-rar-7z-attachments.md  2026-07-17-kwork-reply-pipeline.md  2026-07-17-kwork-reply-quality.md  2026-07-17-kwork-send-preflight.md  2026-07-21-kwork-budget-range.md
docs/superpowers/specs/: 2026-07-17-gui-reply-regeneration-design.md  2026-07-17-human-kwork-replies-design.md  2026-07-17-kwork-rar-7z-attachments-design.md  2026-07-17-kwork-reply-pipeline-design.md  (+3 more)
src/app/: __init__.py  ai_lead_judge.py  ai_reply.py  attachments.py  chrome_cookies.py  config.py  email_client.py  gui.py  handoff.py  kwork_client.py  kwork_sender.py  kwork_source.py  kwork_status.py  lead_api_client.py  lead_filter.py  main.py  public_telegram_client.py  reply_composer.py  reply_policy.py  storage.py  telegram_client.py
tests/: test_ai_lead_judge.py  test_ai_reply.py  test_attachments.py  test_chrome_cookies.py  test_config.py  test_email_client.py  test_gui.py  test_handoff.py  test_kwork_client.py  test_kwork_sender.py  test_kwork_source.py  test_lead_api_client.py  test_lead_filter.py  test_main.py  test_public_telegram_client.py  test_reply_composer.py  test_runtime_cookies.py  test_storage.py
